--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
                 <h2>Introduction</h2>
                 <p style="font-size: 20px;">Hello, my name is Shaun. I am a passionate web developer with a keen interest in technology, programming and photography. I enjoy creating beautiful and user-friendly websites. I am pursuing my B-tech from <a href="https://en.wikipedia.org/wiki/IIT_(BHU)_Varanasi">IIT-BHU</a>. I belong to <a href="https://en.wikipedia.org/wiki/Metallurgy">Metallurgy</a> Department.</p>
                 <div class="row">
+                    
                     <div class="column">
-                      <img src="http://surl.li/byrjm" alt="boat">
+                      <img src="https://scontent.fpnq15-1.fna.fbcdn.net/v/t39.30808-6/348231807_249642317657529_6749770682651908866_n.jpg?stp=dst-jpg_p960x960&_nc_cat=109&ccb=1-7&_nc_sid=e3f864&_nc_ohc=505wt-ZKqzgAX_j13jX&_nc_ht=scontent.fpnq15-1.fna&oh=00_AfBIp8wiwu2FCHZrUoy-2J0Dc952iffdQyW24eeJooBW9Q&oe=64A7344A" alt="IIT BHU" >
                     </div>
                     <div class="column">
-                      <img src="https://shorturl.at/BEMRU" alt="water" >
+                      <img src="me.jpg " alt="SHAUN ARYAN" >
                     </div>
                     <div class="column">
-                      <img src="https://shorturl.at/HKTUY" alt="water" >
-                    </div>
+                        <img src="https://cops-iitbhu.github.io/IG-website//images/slider7001400/COPS_LOGO.png" alt="COPS LOGO">
+                      </div>
                   </div>
                 <!-- <img src="http://surl.li/byrjm" alt="Profile Picture"> -->
                
